# KatrielNetCPP-VSC

./: .gitignore  CMakeLists.txt  readme.md  run client.bat  run client.sh  run server.bat  run server.sh  run.sh  запуск отладки.bat  запуск тестов.bat
include/net/: MainClient.cpp
src/: main.cpp  main.hpp
src/client/: CMakeLists.txt  main.cpp  main.hpp
src/net/: ActionDispatcher.cpp  ActionDispatcher.hpp  ConnectionState.cpp  ConnectionState.hpp  KatrielNet.hpp  LogType.hpp  MainClient.cpp  MainClient.hpp  MainServer.cpp  MainServer.hpp  MessageFlag.hpp  MessageReader.cpp  MessageReader.hpp  MessageType.hpp  MessageWriter.cpp  MessageWriter.hpp  NetHelper.cpp  NetHelper.hpp  WebRequest.cpp  WebRequest.hpp
src/server/: CMakeLists.txt  main.cpp  main.hpp  test.rar
